# lexisense

./: .replit  api_routes.py  app.py  document_processor.py  embedding_service.py  models.py  pyproject.toml  query_analyzer.py  readme.md  replit.md  sample_insurance_policy.txt
.local/state/replit/agent/: .latest.json
attached_assets/: Pasted-LLM-Powered-Intelligent-Query-Retrieval-System-Firebase-Studio-Ready-System-Goal-You-are-an-LLM-O-1754639966264_1754639966268.txt
instance/: documents.db
static/css/: style.css
static/js/: app.js
templates/: index.html
